<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AboutFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:src="@drawable/dashlogo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="MISSION"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:textSize="22sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_sans"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/mission"
            android:textAlignment="center"
            android:textSize="17sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="VISION"
            android:textColor="@color/black"

            android:gravity="center"
            android:layout_marginTop="25dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_sans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/vision"
            android:textAlignment="center"
            android:textSize="17sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="OATH"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:fontFamily="@font/nunito_sans"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/oath"
            android:textAlignment="center"
            android:textSize="17sp"/>
    </LinearLayout>
</ScrollView>