<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.AddMedicineFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/eight_dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/four_dp"
            app:cardElevation="@dimen/two_dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/sixteen_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Title Medicine Name"
                    android:textColor="@color/purple_700"
                    android:textSize="20sp"
                    android:fontFamily="@font/nunito_sans"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/edit_med_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_enter_med_name" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            app:cardCornerRadius="@dimen/four_dp"
            app:cardElevation="@dimen/two_dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/sixteen_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine_days"
                    android:textColor="@color/purple_700"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="@font/nunito_sans"/>


                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/every_day"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/every_day" />

                <LinearLayout
                    android:id="@+id/checkbox_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="7">

                    <CheckBox
                        android:id="@+id/dv_sunday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="S" />

                    <CheckBox
                        android:id="@+id/dv_monday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="M" />


                    <CheckBox
                        android:id="@+id/dv_tuesday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="T" />

                    <CheckBox
                        android:id="@+id/dv_wednesday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="W" />

                    <CheckBox
                        android:id="@+id/dv_thursday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="T" />

                    <CheckBox
                        android:id="@+id/dv_friday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="F" />


                    <CheckBox
                        android:id="@+id/dv_saturday"
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/background_day_view"
                        android:button="@null"
                        android:gravity="center"
                        android:text="S" />
                </LinearLayout>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/eight_dp"
            app:cardCornerRadius="@dimen/four_dp"
            app:cardElevation="@dimen/two_dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="@dimen/sixteen_dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_reminder"
                    android:textColor="@color/purple_700"
                    android:textSize="@dimen/text_medium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_medicine_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_underline"
                        android:gravity="center"
                        android:padding="@dimen/four_dp"
                        android:textColor="#4d4d4d"
                        android:textSize="@dimen/text_large"
                        android:textStyle="bold"
                        tools:text="23:30" />

                    <EditText
                        android:id="@+id/tv_dose_quantity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/drawable_underline"
                        android:gravity="center"
                        android:padding="@dimen/four_dp"
                        android:text="1.0" />


                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/spinner_dose_units"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_weight="1"
                        android:entries="@array/medications_shape_array" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>